--- a/package.json
+++ b/package.json
@@ -9,9 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.5",
+    "@mui/material": "^5.16.5",
+    "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
+    "js-cookie": "^3.0.5",
+    "moment": "^2.30.1",
+    "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5"
+    "react-dom": "^18.3.1",
+    "react-input-emoji": "^5.9.0",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.25.1",
+    "react-toastify": "^10.0.5",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "eslint": "^8",
