na social stage 2

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 NEXT_PUBLIC_MAILBITE_API_KEY = CasU85lAe3f7DfjphSCS1Uht8sJDgmmbe0F7
 
+NEXT_PUBLIC_BASE_URL = http://localhost:5000/api/v1
+
+NEXT_PUBLIC_TENOR_API_KEY = AIzaSyDJstIHSlL0zAnGHp2Kd6L2AIiRht0FeC0
