--- a/package.json
+++ b/package.json
@@ -9,22 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@charkour/react-reactions": "^0.11.0",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
+    "@mui/x-date-pickers": "^7.15.0",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
+    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
+    "emoji-picker-react": "^4.11.1",
+    "gif-picker-react": "^1.3.3",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "next": "14.2.5",
     "react": "^18",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-input-emoji": "^5.9.0",
+    "react-intersection-observer": "^9.13.0",
+    "react-reactions": "^0.1.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-toastify": "^10.0.5",
+    "redux-persist": "^6.0.0",
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
