--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ NEXT_PUBLIC_BACKEND_FILE_URL = http://localhost:5000/uploadfiles
 
 NEXT_PUBLIC_TENOR_API_KEY = AIzaSyDJstIHSlL0zAnGHp2Kd6L2AIiRht0FeC0
 
-NEXT_PUBLIC_SOCKET_SERVER = "http://localhost:8000"
+NEXT_PUBLIC_SOCKET_SERVER = http://localhost:8000
 
 NEXT_PUBLIC_STRIGGEE_API_SID_KEY = SK.0.qXwUa3u6SVYK9jz5p24evfqhLZ1t5y
 
