--- a/.env
+++ b/.env
@@ -1,8 +1,12 @@
 NEXT_PUBLIC_MAILBITE_API_KEY = CasU85lAe3f7DfjphSCS1Uht8sJDgmmbe0F7
 
 NEXT_PUBLIC_BASE_URL = https://nasserver-production.up.railway.app/api/v1
+# NEXT_PUBLIC_BASE_URL = http://localhost:5000/api/v1
+
 
 NEXT_PUBLIC_BACKEND_FILE_URL = https://nasserver-production.up.railway.app/uploadfiles
+# NEXT_PUBLIC_BACKEND_FILE_URL = http://localhost:5000/uploadfiles
+
 
 NEXT_PUBLIC_TENOR_API_KEY = AIzaSyDJstIHSlL0zAnGHp2Kd6L2AIiRht0FeC0
 
