change env to complete

--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ NEXT_PUBLIC_BACKEND_FILE_URL = https://nasserver-production.up.railway.app/uploa
 
 NEXT_PUBLIC_TENOR_API_KEY = AIzaSyDJstIHSlL0zAnGHp2Kd6L2AIiRht0FeC0
 
-NEXT_PUBLIC_SOCKET_SERVER = https://nassocket-production.up.railway.app/
+NEXT_PUBLIC_SOCKET_SERVER = https://nassocket-production.up.railway.app
 # NEXT_PUBLIC_SOCKET_SERVER = http://localhost:8000
 
 
