--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@mui/material": "^5.16.5",
     "@mui/x-date-pickers": "^7.15.0",
     "@reduxjs/toolkit": "^2.2.7",
-    "axios": "^1.7.2",
+    "@tanstack/react-query": "^5.62.11",
+    "@tanstack/react-query-devtools": "^5.62.11",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
